[gd_scene load_steps=4 format=3 uid="uid://ccucbmqtyly8g"]

[ext_resource type="Script" path="res://party_preparation_scene/hero_ui.gd" id="1_xtam5"]
[ext_resource type="Texture2D" uid="uid://ddiwhj30tkayc" path="res://assets/playerIcons/default.png" id="2_xujpq"]
[ext_resource type="Theme" uid="uid://bfqd5rdraqpr6" path="res://assets/themes/h2_text_black.tres" id="3_yptfx"]

[node name="HeroUI" type="Control"]
layout_mode = 3
anchor_right = 0.22
anchor_bottom = 1.0
script = ExtResource("1_xtam5")

[node name="TraitsUI" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.5
grow_horizontal = 2
grow_vertical = 2

[node name="HeroMainUI" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.01
anchor_top = 0.01
anchor_right = 0.4
anchor_bottom = 1.0
offset_left = -0.23
offset_top = -0.02
offset_right = -0.199997
offset_bottom = -0.0659943
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="HeroMainUI"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.6
offset_left = 2.64
offset_right = -2.64
offset_bottom = 27.6426
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_xujpq")
expand_mode = 1
stretch_mode = 4

[node name="HeroNameLabel" type="Label" parent="HeroMainUI"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.6
anchor_right = 1.0
anchor_bottom = 0.8
offset_left = 3.0
offset_top = -0.360413
offset_right = 1.0
offset_bottom = -17.3959
theme = ExtResource("3_yptfx")
text = "Name example"
autowrap_mode = 3
metadata/_edit_use_anchors_ = true

[node name="EditHeroButton" type="Button" parent="HeroMainUI"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.85
anchor_right = 1.0
anchor_bottom = 0.95
offset_left = -3.56
offset_top = -0.510834
offset_right = 4.43999
offset_bottom = 7.48917
theme = ExtResource("3_yptfx")
text = "Edit Hero"
